--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ header {
   }
 }
 
-.header-wave {
+.background-wave {
   display: none;
   position: absolute;
   bottom: 0;
@@ -114,7 +114,7 @@ header {
 }
 
 @media screen and (min-width: 800px) {
-  .header-wave {
+  .background-wave {
     display: block;
   }
 }
