--- a/main.css
+++ b/main.css
@@ -240,6 +240,14 @@ header {
   position: relative;
 }
 
+.background-shapes {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
 
 .pre-icon:before {
   content:"";
