--- a/main.css
+++ b/main.css
@@ -131,7 +131,7 @@ header, section {
   padding: 3.2rem 0;
 }
 
-header, section:nth-child(odd) {
+header {
   background-color:	var(--background);
 }
 
@@ -150,12 +150,23 @@ header {
   position: absolute;
   top: 100%;
   width: 100%;
+  z-index: 1;
 }
 
 .background-wave--past {
   height: 6rem;
   bottom: 0;
   top: auto;
+}
+
+.background-shapes {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: var(--background);
 }
 
 @media screen and (min-width: 800px) {
@@ -263,19 +274,11 @@ header {
   position: relative;
   padding-bottom: 6rem;
   overflow: hidden;
+  background: none;
 }
 
 .past-events .container {
   position: relative;
-}
-
-.background-shapes {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
 }
 
 .pre-icon:before {
