--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   --text: hsl(0, 0%, 24%);
   --link: hsl(255, 18%, 44%);
   --link-light: hsl(255, 18%, 75%);
+  --accent: hsl(11,100%,67%);
   --background: hsl(38, 82%, 91%);
   --grey: hsl(0, 0%, 78%);
 }
@@ -320,14 +321,14 @@ header {
 
 .event-photos img {
   width: 70%;
-  border: 4px solid #FF7657;
+  border: 4px solid var(--accent);
 }
 .event-photos img:first-child {
   margin-left: 30%;
 }
 .event-photos img:last-child {
   margin-top: -15%;
-  border-color: #FFBA5A;
+  border-color: var(--primary);
 }
 
 .past-event:nth-child(odd) .event-info {
@@ -337,11 +338,11 @@ header {
 
 .past-event:nth-child(odd) .event-photos img:first-child {
   margin-left: 0;
-  border-color: #FFBA5A;
+  border-color: var(--primary);
 }
 .past-event:nth-child(odd) .event-photos img:last-child {
   margin-left: 30%;
-  border-color: #FF7657;
+  border-color: var(--accent);
 }
 
 @media screen and (min-width: 800px) {
