--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@ button:hover, button:focus, input[type="submit"]:hover, input[type="submit"]:foc
   padding: 0 2rem;
 }
 
-header, section {
+header, section, footer {
   padding: 3.2rem 0;
 }
 
@@ -375,4 +375,32 @@ header {
 .contribute {
   padding-top: 6rem;
   display: flex;
+}
+
+.footer {
+  background-color: var(--background);
+}
+
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-links {
+  display: flex;
+}
+
+.footer-link {
+  display: flex;
+}
+
+.footer-link + .footer-link {
+  margin-left: 1rem;
+}
+
+.icon {
+  height: 2rem;
+  width: 2rem;
+  margin-right: .5rem;
 }
