--- a/main.css
+++ b/main.css
@@ -35,6 +35,13 @@ html {
   font-size: 62.5%;
 }
 
+@font-face {
+  font-family: 'RocherColor';
+  src: url('fonts/RocherColorGX.woff2') format('woff2'),
+       url('fonts/RocherColorGX.woff') format('woff');
+  font-display: swap;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
@@ -42,7 +49,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'RocherColor', serif;
 }
 
 h1 {
@@ -61,23 +68,6 @@ h2 {
   text-transform: uppercase;
   text-align: center;
   font-size: 2.4rem;
-}
-
-h2::before, h2::after {
-  content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 85.3 4.2'><path d='M1 2c.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4S8.3 3.4 9 2.8c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8s1.2.3 1.8.8c.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8.8 0 1.2.3 1.8.8.7.6 1.5 1.4 3.1 1.4s2.4-.8 3.1-1.4c.6-.5.9-.8 1.8-.8s1.2.3 1.8.8c.7.6 1.5 1.4 3.1 1.4.6 0 1-.4 1-1s-.4-1-1-1c-.8 0-1.2-.3-1.8-.8C81.8.8 81 0 79.4 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C72 .8 71.2 0 69.6 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8s-1.2-.3-1.8-.8C62.2.8 61.4 0 59.8 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8s-1.2-.3-1.8-.8C52.4.8 51.6 0 50 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C42.6.8 41.8 0 40.2 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C32.8.8 32 0 30.4 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C23 .8 22.2 0 20.6 0s-2.4.8-3.1 1.4c-.6.5-.9.8-1.8.8-.8 0-1.2-.3-1.8-.8C13.2.8 12.4 0 10.8 0S8.4.8 7.7 1.4c-.6.5-.9.8-1.8.8s-1.2-.3-1.8-.8C3.4.8 2.6 0 1 0 .4 0 0 .4 0 1s.4 1 1 1z'/></svg>");
-  position: absolute;
-  top: 10px;
-  width: 80px;
-}
-
-h2::before {
-  left: -10px;
-  transform: translate(-100%, -50%);
-}
-
-h2::after {
-  right: -10px;
-  transform: translate(100%, -50%);
 }
 
 h3 {
