Add missing font properties

--- a/main.css
+++ b/main.css
@@ -39,6 +39,8 @@ html {
   font-family: 'RocherColor';
   src: url('fonts/RocherColorGX.woff2') format('woff2'),
        url('fonts/RocherColorGX.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -50,6 +52,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'RocherColor', serif;
+  font-weight: normal;
 }
 
 h1 {
