--- a/main.css
+++ b/main.css
@@ -60,22 +60,16 @@ h1 {
   font-size: 4rem;
 }
 
-.title-wrapper {
+h2 {
+  text-transform: uppercase;
+  font-size: 2.8rem;
   text-align: center;
   margin-bottom: 4rem;
 }
 
-h2 {
-  position: relative;
-  display: inline-block;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 2.4rem;
-}
-
 h3 {
   margin-bottom: 1.6rem;
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 a {
@@ -281,6 +275,10 @@ textarea {
   position: relative;
 }
 
+.pre-icon {
+  display: flex;
+  align-items: baseline;
+}
 .pre-icon:before {
   content:"";
   display: inline-block;
@@ -294,6 +292,17 @@ textarea {
 }
 .event-time:before {
   background-image: url(img/icon-calendar.svg);
+}
+.event-location span {
+  position: relative;
+}
+.event-location a:before {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .event-location:before {
   background-image: url(img/icon-location.svg);
@@ -318,7 +327,6 @@ textarea {
 .event-info time,
 .event-info p {
   line-height: 2.4;
-  display: block;
 }
 
 .event-photos img {
