--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ body {
   color: var(--text);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
   font-family: 'RocherColor', serif;
   font-weight: normal;
 }
@@ -355,12 +355,54 @@ textarea {
   border-color: var(--accent);
 }
 
+.future-event {
+  flex-wrap: wrap;
+}
+
+.future-event > h3 {
+  width: 100%;
+}
+
+.speakers {
+  list-style: none;
+}
+
+.speakers li {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+}
+
+.speakers img {
+  width: 15rem;
+  margin-right: 2rem;
+}
+
+.speakers .more {
+  font-family: 'RocherColor';
+  width: 15rem;
+  height: 15rem;
+  margin-right: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 8rem;
+  background: var(--background);
+}
+
 @media screen and (min-width: 800px) {
+  .future-event,
   .past-event {
     display: flex;
+    flex-wrap: wrap;
   }
   .event-info {
+    width: 35%;
     margin-bottom: 0;
+  }
+  .event-details,
+  .event-photos {
+    width: 65%;
   }
   .event-photos img {
     width: 55%;
