Add new meetup in November 2019 with copy for Thomas Di Martino

--- a/main.css
+++ b/main.css
@@ -400,6 +400,7 @@ textarea {
   justify-content: center;
   font-size: 8rem;
   background: var(--background);
+  flex-shrink: 0;
 }
 
 @media screen and (min-width: 800px) {
