--- a/main.css
+++ b/main.css
@@ -379,9 +379,12 @@ textarea {
 }
 
 .speakers li {
-  margin-top: 3rem;
   display: flex;
   align-items: flex-start;
+}
+
+.speakers li:not(:first-of-type) {
+  margin-top: 3rem;
 }
 
 .speakers img {
